[package]
name = "test_minmax"
version = "0.1.0"
authors = ["Athipat Pipatpinyopong <athipatpipat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.13.0", features = ["std_web"] }
strum = "0.13"
strum_macros = "0.13"